# zendemo

./: Cargo.toml  LICENSE  README.md
assets/shaders/: static_shader.frag  static_shader.vert
assets/triangulation/: triangulation_table.txt
src/: lib.rs
src/entities/: basic_marching_cubes.rs  camera.rs  chunk_manager.rs  mod.rs  table_reader.rs
src/input/: input_manager.rs
src/models/: mod.rs  raw_model.rs
src/rendering/: display_manager.rs  loader.rs  mod.rs  renderer.rs
src/shaders/: base_shader.rs  mod.rs  static_shader.rs
src/utils/: constants.rs  fps.rs  math.rs  mod.rs
