[package]
name = "terrainbasic"
version = "0.1.0"
authors = ["joand <joan.d.lee112@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.6.0"
glutin = "0.26.0"
cgmath = "0.18.0"
crossbeam = "0.8.0"
noise = "0.7.0"
ndarray = { version = "0.14.0", features = ["rayon"] }

[[bin]]
name = "terrainbasic"
path = "src/bin/main.rs"